DRAKEN-2658: Changed to use version 2.0 of messaging settings