@@ -1,9 +1,12 @@
 package se.sundsvall.casedata.integration.messaging;
 
 import static java.util.Collections.emptyList;
+import static java.util.Optional.ofNullable;
+import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 import static se.sundsvall.casedata.api.model.validation.enums.StakeholderRole.APPLICANT;
 import static se.sundsvall.casedata.integration.db.model.enums.ContactType.EMAIL;
 
+import com.nimbusds.oauth2.sdk.util.StringUtils;
 import generated.se.sundsvall.messaging.Email;
 import generated.se.sundsvall.messaging.EmailRequest;
 import generated.se.sundsvall.messaging.EmailSender;
@@ -11,66 +14,66 @@ import generated.se.sundsvall.messaging.MessageParty;
 import generated.se.sundsvall.messaging.MessageRequest;
 import generated.se.sundsvall.messaging.MessageSender;
 import generated.se.sundsvall.messaging.Sms;
-import generated.se.sundsvall.messagingsettings.SenderInfoResponse;
 import java.util.List;
-import java.util.Optional;
+import java.util.Objects;
 import java.util.UUID;
 import se.sundsvall.casedata.integration.db.model.ContactInformationEntity;
 import se.sundsvall.casedata.integration.db.model.ErrandEntity;
 import se.sundsvall.casedata.integration.db.model.StakeholderEntity;
+import se.sundsvall.casedata.service.model.MessagingSettings;
 
 public final class MessagingMapper {
+
+	private static final String FILTER_TEMPLATE = "exists(values.key: 'namespace' and values.value: '%s') and exists(values.key: 'department_name' and values.value: '%s')";
 
 	private MessagingMapper() {
 		// Private constructor to prevent instantiation
 	}
 
-	public static EmailRequest toEmailRequest(final ErrandEntity errandEntity, final SenderInfoResponse senderInfo, final StakeholderEntity stakeholderEntity) {
+	public static EmailRequest toEmailRequest(final ErrandEntity errandEntity, final MessagingSettings messagingSettings, final StakeholderEntity stakeholderEntity) {
 		return new EmailRequest()
 			.subject("Nytt meddelande kopplat till ärendet " + errandEntity.getCaseTitleAddition() + " " + errandEntity.getErrandNumber())
-			.message(createBody(errandEntity, senderInfo))
+			.message(createBody(errandEntity, messagingSettings))
 			.emailAddress(findStakeholderEmail(stakeholderEntity))
 			.sender(new EmailSender()
-				.name(senderInfo.getContactInformationEmailName())
-				.address(senderInfo.getContactInformationEmail()));
+				.name(messagingSettings.getContactInformationEmailName())
+				.address(messagingSettings.getContactInformationEmail()));
 	}
 
-	public static MessageRequest toMessagingMessageRequest(final ErrandEntity errandEntity, final SenderInfoResponse senderInfo) {
-
+	public static MessageRequest toMessagingMessageRequest(final ErrandEntity errandEntity, final MessagingSettings messagingSettings) {
 		return new MessageRequest()
 			.messages(List.of(new generated.se.sundsvall.messaging.Message()
 				.subject("Nytt meddelande kopplat till ärendet " + errandEntity.getCaseTitleAddition() + " " + errandEntity.getErrandNumber())
-				.message(createBody(errandEntity, senderInfo))
+				.message(createBody(errandEntity, messagingSettings))
 				.party(new MessageParty().partyId(findErrandOwnerPartyId(errandEntity)))
 				.sender(new MessageSender()
 					.sms(new Sms()
-						.name(senderInfo.getSmsSender()))
+						.name(messagingSettings.getSmsSender()))
 					.email(new Email()
-						.name(senderInfo.getContactInformationEmail())
-						.address(senderInfo.getContactInformationEmail())))));
+						.name(messagingSettings.getContactInformationEmail())
+						.address(messagingSettings.getContactInformationEmail())))));
 
 	}
 
-	static String createBody(final ErrandEntity errandEntity, final SenderInfoResponse senderInfo) {
-
-		if (senderInfo.getSupportText() == null || senderInfo.getSupportText().isBlank()) {
+	static String createBody(final ErrandEntity errandEntity, final MessagingSettings messagingSettings) {
+		if (StringUtils.isBlank(messagingSettings.getSupportText())) {
 			return "";
 		}
 
 		return String.format(
-			senderInfo.getSupportText(),
+			messagingSettings.getSupportText(),
 			findErrandOwnerFirstName(errandEntity),
 			errandEntity.getCaseTitleAddition(),
 			errandEntity.getErrandNumber(),
-			senderInfo.getContactInformationUrl(),
+			messagingSettings.getContactInformationUrl(),
 			errandEntity.getId());
 	}
 
 	static String findErrandOwnerFirstName(final ErrandEntity errandEntity) {
-
-		return Optional.ofNullable(errandEntity.getStakeholders())
+		return ofNullable(errandEntity.getStakeholders())
 			.orElse(emptyList())
 			.stream()
+			.filter(stakeholder -> isNotEmpty(stakeholder.getRoles()))
 			.filter(stakeholder -> stakeholder.getRoles().contains(APPLICANT.name()))
 			.findFirst()
 			.map(StakeholderEntity::getFirstName)
@@ -78,29 +81,28 @@ public final class MessagingMapper {
 	}
 
 	static UUID findErrandOwnerPartyId(final ErrandEntity errandEntity) {
-
-		final var partyIdString = Optional.ofNullable(errandEntity.getStakeholders())
+		return ofNullable(errandEntity.getStakeholders())
 			.orElse(emptyList())
 			.stream()
+			.filter(stakeholder -> isNotEmpty(stakeholder.getRoles()))
 			.filter(stakeholder -> stakeholder.getRoles().contains(APPLICANT.name()))
 			.findFirst()
 			.map(StakeholderEntity::getPersonId)
+			.map(UUID::fromString)
 			.orElse(null);
-
-		if (partyIdString == null || partyIdString.isBlank()) {
-			return null;
-		}
-		return UUID.fromString(partyIdString);
 	}
 
 	static String findStakeholderEmail(final StakeholderEntity stakeholderEntity) {
-
-		return Optional.ofNullable(stakeholderEntity.getContactInformation())
+		return ofNullable(stakeholderEntity.getContactInformation())
 			.orElse(emptyList())
 			.stream()
-			.filter(contactInformation -> contactInformation.getContactType() != null && contactInformation.getContactType().equals(EMAIL))
+			.filter(contactInformation -> Objects.equals(EMAIL, contactInformation.getContactType()))
 			.findFirst()
 			.map(ContactInformationEntity::getValue)
 			.orElse(null);
+	}
+
+	public static String toFilterString(final String namespace, final String departmentName) {
+		return FILTER_TEMPLATE.formatted(namespace, departmentName);
 	}
 }
